2016-03-29 (0.12.6)
	Removed TICKSPERSEC
	Removed BALLOC, MALLOC and VADR keywords. Removed duplicate ENVIRON
	Removed system constants BPP and VIDADR, OSNAME, LINECHART, BARCHART
	Added TIMESTAMP to return the modified-datetime of a file
	SBVER now includes build information
	TICKS now returns millisecond intervals
	Refactor eval() for performance
	Fixed some memory leaks in the ui handler
	Editor now restores cursor when returning from run
	Editor now displays the correct filename in the title bar
	Added "industrial" editor theme from Shian (slot 2)
	Fixed editor highlighting
	Runtime errors now show source screen with red error highlighter
	Form refresh command now takes an boolean arg, true=push ui state to vars
	Added window.setFont command to set font size, bold and italic. example:
           w = window():w.setFont(10, "pt", false, true)
	Fixed problem with escaped chars using FORMAT
	Fixed problem with XNOR command result
	TRUE is now always returned as 1
	Fixed problem with IMP and EQV command result
	Fixed problem with INKEY command
	Fixed capslock handling
	Added file manager to main shell program
	Fixed issues with TRY/CATCH

2016-02-11
	Added export to mobile command (SDL)
	Added Desktop shortcut command (android)

2015-12-05
	Implemented loading recent files via ALT+1 .. ALT+9
	Fix potential editor crash with empty support widget
	Fix potential crash with debug target
	Fix restore path to only function when no other arguments supplied

2015-11-01
	Fix debugger launch in linux build
	Fix editor display issue with keyword completion
	Fix editor case insensitive search
	Fix image drawing for large images
	Fix PAINT infinite loop
	Fix keyboard handling for non-us keymaps
	Fix Ctrl+Home editor keystroke handler
	Fix crash with online command if site is down
	Fix over scroll issue with line number widget
	Fix screen dump invalid file name for online files
	Fix file manager .bas file case sensitivity
	Fix editor markup on map fields that look like keywords