@@ -203,3 +203,7 @@ assertEq 0xcccccccc Eqv 0xaaaaaaaa, 0x99999999, PROGLINE
 assertEq 0xcccc Eqv 0xaaaa, 0x9999, PROGLINE
 assertEq 0xcc Eqv 0xaa, 0x99, PROGLINE
 assertEq 0xc Eqv 0xa, 0x9, PROGLINE
+
+' bit shift operators
+assertEq 0xFF  LSHIFT 1, 0x1FE, PROGLINE
+assertEq 0x1FE RSHIFT 1, 0xFF,  PROGLINE
